<resources>
    <string name="app_name">JorgeIbarra</string>
    <string name="txtNombres">Nombre: </string>
    <string name="txtApellido">Apellido: </string>
    <string name="txtBase">Base: </string>
    <string name="txtExponente">Exponente: </string>
    <string name="txtFactorial">Factorial: </string>
    <string name="txtPotencia">Potencia: </string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnCerrar">Cerrar</string>
    <string name="btnResultado">Resultado</string>
    <string name="txtNumCalc">Numero a Calcular</string>
    <string name="txtPorSaber"> </string>
</resources>