<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNombreActvt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtNombres" />

        <TextView
            android:id="@+id/tvNombreActvt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtPorSaber" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="30px">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtBase" />

        <TextView
            android:id="@+id/tvBaseActvt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtPorSaber" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSiguienteActvt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="70px"
        android:onClick="AbrirActivity3"
        android:text="@string/btnSiguiente" />

    <Button
        android:id="@+id/btnCerrarActvt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="70px"
        android:text="@string/btnCerrar" />

</LinearLayout>